BloodBank_PBD/Content/Site.css
.my-border {
    border: 1px solid red;
}

a {
    color: #000000;
}

    a:hover {
        text-decoration: none;
        color: #F1562A;
        transition: color 0.4s ease 0s;
    }

.container-fluid {
    margin: 77px 0;
    padding: 0;
}

/* Shared Layout */
/* Left Navigation */
.navbar {
    padding: 0;
    background-image: linear-gradient(#F1F5F7, #FFFFFF);
    justify-content: space-between;
}

.logo-image {
    height: 47px;
    padding-left: 16px;
}

.logo-title {
    text-transform: uppercase;
    font: 900 17px poppins-semibold, poppins, sans-serif;
}

.menu-bar {
    display: none;
    position: absolute;
    top: 10px;
    right: 30px;
    margin: 20px, 50px;
}

.fas.fa-bars {
    font-size: 25px;
}

/* Right Navigation */
.nav-login {
    align-self: center;
    font: 14px avenir-lt-w01_85-heavy1475544, sans-serif;
    padding: 0 20px;
}

.dropdown-menu {
    margin-top: 20px;
    min-width: 0;
    border: 0;
}

.dropdown-item {
    font: 14px avenir-lt-w01_85-heavy1475544, sans-serif;
    text-transform: capitalize;
}

    .dropdown-item:hover {
        background-color: #FFFFFF;
        color: #F1562A;
        transition: color 0.4s ease 0s;
    }

    .dropdown-item:active {
        background-color: #FFFFFF;
    }

.nav-home,
.nav-about,
.nav-services,
.nav-contact {
    width: 154px;
    height: 77px;
    text-align: center;
    font: 14px avenir-lt-w01_85-heavy1475544, sans-serif;
    text-transform: capitalize;
}

.nav-home {
    background-color: #F1562A;
}

.nav-about {
    background-color: #F89825;
}

.nav-services {
    background-color: #7EB7E4;
}

.nav-contact {
    background-color: #000000;
}

.nav-link {
    line-height: 440%;
    color: #FFFFFF;
}

.contact-link {
    line-height: 550%;
    color: #FFFFFF;
}

.nav-link:hover {
    background-color: #000000;
    transition: background-color 0.4s ease 0s;
}

.footer-card-content {
    padding: 100px 0;
    text-align: center;
    background-color: #F1562A;
}

.footer-title {
    font: 900 12vw poppins-semibold, poppins, sans-serif;
    text-transform: uppercase;
    color: #FFFFFF;
}

.footer-text {
    font: 900 5vw poppins-semibold, poppins, sans-serif;
    color: #FFFFFF;
}

.card-footer {
    text-align: center;
    font: 12px avenir-lt-w01_85-heavy1475544, sans-serif;
}

/* Login Page */
.login-card {
    width: 365px;
    border: 0;
}

.login-title {
    font: 900 48px poppins-semibold,poppins,sans-serif;
    text-transform: capitalize;
}

.new-user {
    font: 18px avenir-lt-w01_35-light1475496,sans-serif;
}

.signup-link {
    color: #F1562A;
    text-transform: capitalize;
}

    .signup-link:hover {
        text-decoration: none;
    }

.user-txt {
    position: absolute;
    width: 320px;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    font: 16px avenir-lt-w01_35-light1475496,sans-serif;
    box-shadow: none;
}

.user-label {
    position: relative;
    pointer-events: none;
    transition: 0.5s;
    text-transform: capitalize;
    font: 16px avenir-lt-w01_35-light1475496,sans-serif;
    padding: 15px 0;
}

.user-txt:focus + label,
.user-txt:valid + label {
    transform: translateY(-35px);
    font-size: 12px;
}

.text-danger {
    font: 12px avenir-lt-w01_35-light1475496,sans-serif;
}

.user-error {
    position: absolute;
    top: 150px;
}

.password-error {
    position: absolute;
    top: 230px;
}

.login-btn {
    padding-top: 10px;
}

    .login-btn input {
        width: 320px;
        height: 50px;
        text-transform: capitalize;
        background-color: #F1562A;
        color: #FFFFFF;
        border: none;
        font: 16px avenir-lt-w01_35-light1475496,sans-serif;
    }

        .login-btn input:hover {
            opacity: 0.7;
            transition: opacity .2s ease-in-out;
        }

/* SignUp Page */
.new-user-txt {
    width: 320px;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    font: 16px avenir-lt-w01_35-light1475496,sans-serif;
    box-shadow: none;
    padding-top: 14px;
}

.password-mismatch-error {
    display: none;
}

/* Admin Page */
.admin-menu {
    font: bold 1.8em Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    padding: 25px 0px 20px 0px;
}

.admin-btn {
    width: 250px;
    height: 40px;
    margin: 10px 0 0 15px;
    border: 1px solid rgba(0, 0, 0, 0.125);
    text-align: center;
    padding-top: 10px;
    text-transform: capitalize;
    font: 14px avenir-lt-w01_35-light1475496,sans-serif;
}

    .admin-btn a {
        color: #A1391C;
    }

        .admin-btn a:hover {
            color: ActiveBorder;
            transition: color 0.4s ease 0s;
        }

.search-txt {
    width: 200px;
    height: 35px;
    border-radius: 5px;
}

/* View User Information - User */
.user-avatar {
    width: 250px;
    height: 258px;
    text-align: center;
    padding: 35px 10px;
    margin: 50px 15px 0px 0px;
}

.fas.fa-user-circle {
    font-size: 5.4em;
}

.user {
    margin-top: 10px;
    font: 16px avenir-lt-w01_35-light1475496, sans-serif;
}

.role {
    margin: 5px 0px 20px 0px;
    font: 12px avenir-lt-w01_35-light1475496, sans-serif;
    text-transform: capitalize;
}

.user-info {
    font: 15px avenir-lt-w01_35-light1475496, sans-serif;
    padding: 70px;
}

    .user-info h2 {
        font: 900 26px poppins-semibold, poppins, sans-serif;
        text-transform: capitalize;
    }

    .user-info p {
        font: 15px avenir-lt-w01_35-light1475496, sans-serif;
    }

.card-left {
    padding-left: 0;
}

.card-right {
    padding-right: 0;
}

.username-group {
    margin-bottom: 40px;
}

.update-btn {
    text-transform: capitalize;
    background-color: #F1562A;
    color: #FFFFFF;
    border: none;
    height: 40px;
}

    .update-btn:hover {
        opacity: 0.7;
        transition: opacity 400ms ease-out;
    }

.username-card {
    display: none;
}

.password-card {
    display: none;
}

/* Home Page */
.carousel-inner img {
    width: 100%;
    height: 75vw;
}

.carousel-caption {
    width: 60vw;
    height: 240px;
    font: 700 9vw poppins-semibold, poppins, sans-serif;
    color: #000000;
    text-transform: uppercase;
    text-align: left;
    position: absolute;
    top: 12vw;
    left: 10vw;
    line-height: 11vw;
}

.banner-separator {
    width: 141px;
    height: 30px;
    background-color: #F1562A;
}

.banner-half-message {
    color: #F1562A;
}

.statistics {
    padding: 7vw 50px;
}

.stat-number {
    font: 900 120px poppins-semibold, poppins, sans-serif;
    color: #F1562A;
}

.stat-label {
    font: bold 30px poppins-semibold, poppins, sans-serif;
}

.about-card {
    background-color: #000000;
    padding: 50px 95px 50px 60px;
}

.card-body-title {
    font: bold 30px poppins-semibold, poppins, sans-serif;
    color: #FFFFFF;
}

.card-body-content {
    font: 14px avenir-lt-w01_35-light1475496, sans-serif;
    color: #FFFFFF;
    letter-spacing: 0.02em;
    line-height: 1.7em;
}

.top-img {
    width: 100%;
    height: 100%;
}

.blood-camp {
    background-color: #7EB7E4;
    padding: 50px 95px 50px 60px;
}

.mid-img {
    width: 100%;
    height: 100%;
}

.services {
    background-color: #F1562A;
    padding: 50px 95px 50px 60px;
}

.services-card-title {
    font: 800 9vw poppins-semibold, poppins, sans-serif;
    color: #FFFFFF;
    text-transform: capitalize;
}

.bottom-card-partners {
    background-color: #000000;
    padding: 56px 55px 56px 30px;
}

.bottom-img {
    width: 100%;
    height: 100%;
}

/* About Page */
.banner {
    width: 100%;
    height: 75vw;
}

.banner-text {
    width: 60vw;
    height: 240px;
    font: 700 9vw poppins-semibold, poppins, sans-serif;
    color: #000000;
    text-transform: uppercase;
    text-align: left;
    position: absolute;
    top: 14vw;
    left: 10vw;
    line-height: 11vw;
}

.privacy-policy-card {
    padding: 50px 10vw;
    font: 800 3.5vw poppins-semibold, poppins, sans-serif;
    text-transform: uppercase;
}

.dot {
    color: #F1562A;
}

.privacy-policy-content {
    padding: 55px 15px;
    line-height: 1.7em;
    font: 14px avenir-lt-w01_35-light1475496, sans-serif;
}

    .privacy-policy-content p {
        line-height: 1.7em;
        margin-bottom: 15px;
    }

.gallery-pic {
    height: 100%;
    width: 100%;
}

.hospital-group {
    margin: 0 100px;
}

.hospital-img {
    height: 100%;
    width: 100%;
}

/* Services Page */
.procedure {
    padding-left: 0;
}

    .procedure li {
        line-height: 1.7em;
        margin-bottom: 15px;
    }

.blood-camps {
    margin: 0 75px;
    border: none;
}

.camp-name {
    font: bold 30px poppins-semibold, poppins, sans-serif;
    color: #F1562A;
    text-transform: capitalize;
}

.camp-date {
    font: 14px avenir-lt-w01_35-light1475496, sans-serif;
}

/* Contact Page */
.contact-card-left {
    font: 14px avenir-lt-w01_35-light1475496, sans-serif;
}

.contact-card-right {
    margin-top: 50px;
}

.contact-message {
    font: 500 30px poppins-semibold, poppins, sans-serif;
}

.message-text {
    border-top: 0;
    border-left: 0;
    border-right: 0;
}

.contact-info-title {
    font: 16px avenir-lt-w01_35-light1475496, sans-serif;
    text-transform: uppercase;
}

.contact-media-card {
    height: 100px;
    padding-top: 20px;
}

.fab.fa-facebook-f, .fab.fa-twitter, .fab.fa-instagram, .fab.fa-youtube {
    font-size: 40px;
}

/* Responsive Menu */
.exit-btn {
    font-size: 15vw;
    float: right;
    margin-right: 8vw;
}

.menu-login {
    text-transform: capitalize;
    font: 7vw avenir-lt-w01_35-light1475496, sans-serif;
    margin: 5vw 0 0 20vw;
    padding-top: 8vw;
}

    .menu-login ul {
        padding: 0;
        display: none;
    }

    .menu-login li {
        list-style-type: none;
    }

.menu {
    font: bold 8vw poppins-semibold,poppins,sans-serif;
    text-transform: uppercase;
    padding-left: 19vw;
}

    .menu li {
        list-style-type: none;
        margin: 8vw 0;
        padding: 2vw 0;
    }

/* Responsive Mode */
@media only screen and (max-width: 881px) {
    .menu-bar {
        display: block;
    }

    .navbar-nav {
        display: none;
    }
}

